language/move-lang/tests/move_check/expansion/invalid_unpack_assign_lhs_mdot_no_addr.exp
error: 

   ┌── tests/move_check/expansion/invalid_unpack_assign_lhs_mdot_no_addr.move:4:9 ───
   │
 4 │         false.M { f } = 0;
   │         ^^^^^^^ Invalid module type name access. Expected: a (possibly qualified) struct name
   │

error: 

   ┌── tests/move_check/expansion/invalid_unpack_assign_lhs_mdot_no_addr.move:7:9 ───
   │
 7 │         0.M { f } = 0;
   │         ^^^ Invalid module type name access. Expected: a (possibly qualified) struct name
   │

error: 

    ┌── tests/move_check/expansion/invalid_unpack_assign_lhs_mdot_no_addr.move:10:9 ───
    │
 10 │         foo().M { f } = 0;
    │         ^^^^^^^ Invalid module type name access. Expected: a (possibly qualified) struct name
    │

